--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "styled-components": "^3.2.5",
     "whatwg-fetch": "^2.0.4"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
