--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "gatsby-plugin-sitemap": "^1.2.23",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-remark-prismjs": "^1.2.24",
+    "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-source-contentful": "^1.3.50",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.39",
     "inquirer": "^5.2.0",
     "lodash": "^4.17.5",
     "path": "^0.12.7",
+    "react-burger-menu": "^2.4.4",
     "react-helmet": "^5.2.0",
     "react-plx": "^1.1.2",
     "react-reveal": "^1.2.1",
     "react-scroll": "^1.7.9",
+    "smooth-anchorate": "^1.2.1",
     "styled-components": "^3.2.5",
     "whatwg-fetch": "^2.0.4"
   },
