--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sitemap": "^1.2.23",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-source-contentful": "^1.3.50",
@@ -36,6 +37,8 @@
     "react-reveal": "^1.2.1",
     "react-scroll": "^1.7.9",
     "styled-components": "^3.2.5",
+    "typography": "^0.16.17",
+    "typography-breakpoint-constants": "^0.15.10",
     "whatwg-fetch": "^2.0.4"
   },
   "keywords": [
