--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-gatsby-standard": "^1.2.1",
+    "husky": "^0.14.3",
     "prettier": "^1.12.1",
+    "pretty-quick": "^1.6.0",
     "stylelint": "9.1.3",
     "stylelint-config-prettier": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
