--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:css": "stylelint 'src/**/*.js'",
     "check-pretty": "prettier -l {,src/**/}*.{js,jsx,json,css,scss}",
-    "format": "prettier --write \"src/**/*.js\""
+    "format": "prettier --write \"src/**/*.js\"",
+    "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
