--- a/package.json
+++ b/package.json
@@ -6,41 +6,49 @@
   "author": "Matthias Jordan <me@iammatthias.com>",
   "dependencies": {
     "anchorate": "^1.2.3",
+    "babel-plugin-styled-components": "^1.8.0",
     "chalk": "^2.3.2",
     "contentful-import": "^7.0.1",
-    "dotenv": "^5.0.1",
-    "gatsby": "^1.9.248",
-    "gatsby-image": "^1.0.45",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-canonical-urls": "^1.0.16",
-    "gatsby-plugin-feed": "^1.3.21",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-manifest": "^1.0.21",
-    "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-nprogress": "^1.0.14",
-    "gatsby-plugin-offline": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-sitemap": "^1.2.23",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-remark-prismjs": "^1.2.24",
-    "gatsby-remark-responsive-iframe": "^1.4.18",
-    "gatsby-source-contentful": "^1.3.50",
-    "gatsby-source-filesystem": "^1.5.29",
-    "gatsby-transformer-remark": "^1.7.39",
-    "inquirer": "^5.2.0",
+    "dotenv": "^6.1.0",
+    "gatsby": "^2.0.20",
+    "gatsby-image": "^2.0.13",
+    "gatsby-link": "^2.0.4",
+    "gatsby-plugin-canonical-urls": "^2.0.6",
+    "gatsby-plugin-feed": "^2.0.8",
+    "gatsby-plugin-google-analytics": "^2.0.6",
+    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-netlify": "^2.0.1",
+    "gatsby-plugin-nprogress": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.6",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sitemap": "^2.0.1",
+    "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-prismjs": "^3.0.1",
+    "gatsby-remark-responsive-iframe": "^2.0.5",
+    "gatsby-source-contentful": "^2.0.2",
+    "gatsby-source-filesystem": "^2.0.3",
+    "gatsby-source-instagram": "^0.1.4",
+    "gatsby-source-instagram-all": "^2.0.2",
+    "gatsby-transformer-remark": "^2.1.7",
+    "inquirer": "^6.2.0",
     "lodash": "^4.17.5",
     "path": "^0.12.7",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
+    "react": "^16.5.2",
     "react-burger-menu": "^2.4.4",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-plx": "^1.1.2",
     "react-reveal": "^1.2.1",
     "react-scroll": "^1.7.9",
+    "react-typography": "^0.16.13",
     "styled-components": "^3.2.5",
     "typography": "^0.16.17",
     "typography-breakpoint-constants": "^0.15.10",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^3.0.0"
   },
   "keywords": [
     "gatsby"
@@ -60,13 +68,13 @@
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-gatsby-standard": "^1.2.1",
-    "husky": "^0.14.3",
+    "eslint": "^5.6.1",
+    "eslint-config-gatsby-standard": "^2.0.0",
+    "husky": "^1.1.1",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.6.0",
-    "stylelint": "9.1.3",
-    "stylelint-config-prettier": "^3.2.0",
+    "stylelint": "9.6.0",
+    "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1"
