--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CaliMeetsDelhi",
+  "name": "cali-meets-delhi",
   "description": "We're getting married",
   "version": "1.1.0",
   "repository": "https://github.com/iammatthias/Cali-Meets-Delhi.git",
@@ -48,7 +48,7 @@
     "styled-components": "^3.2.5",
     "typography": "^0.16.17",
     "typography-breakpoint-constants": "^0.15.10",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^2.0.4"
   },
   "keywords": [
     "gatsby"
