--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-images": "^0.5.19",
     "react-plx": "^1.1.2",
+    "react-responsive-masonry": "^2.0.0",
     "react-reveal": "^1.2.1",
     "react-scroll": "^1.7.9",
     "react-typography": "^0.16.13",
