--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-accessible-accordion": "^2.4.4",
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.5.2",
+    "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19",
     "react-plx": "^1.1.2",
