--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-reveal": "^1.2.1",
     "react-scroll": "^1.7.9",
     "react-typography": "^0.16.13",
+    "rebass": "^3.0.1",
     "styled-components": "^3.2.5",
     "typography": "^0.16.17",
     "typography-breakpoint-constants": "^0.15.10",
